deployment/server/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: bp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: localhost:5000/bp-server:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
