deployment/server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: bp-app
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
