deployment/server/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  namespace: bp-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: server.bpapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
